<resources>
    <string name="app_name">CO₂ Footprint</string>
    <string name="title_activity_transportation_select_actvitiy">Select Transportation</string>
    <string name="title_activity_carbon_foot_print">Carbon Footprint</string>
    <string name="title_activity_transportation_add_actvitiy">Add Transportation</string>
    <string name="title_activity_transportation_add_image_actvitiy">Add Transportation Image</string>
    <string name="title_activity_route_select">Select Route</string>
    <string name="title_activity_add_route_actvitiy">Add Route</string>
    <string name="title_activity_result_actvitiy">Your Carbon Footprint</string>
    <string name="main_menu">Main Menu</string>
    <string name="create_journey">Create a New Journey</string>
    <string name="view_carbon_footprint">View CO₂ Footprint</string>
    <string name="total_carbon_footprint">Total Carbon Footprint</string>
    <string name="route_name">Route Name:</string>
    <string name="nickname">Nickname</string>
    <string name="highway_distance">Highway distance:</string>
    <string name="distance_km">Distance(km)</string>
    <string name="city_distance">City Distance:</string>
    <string name="total_distance">Total Distance:</string>
    <string name="ok">OK</string>
    <string name="transportation_name">Transportation Name</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="title_activity_journey_menu">Create Journey</string>
    <string name="title_activity_carbon_footprint_Table_actvitiy">Table</string>
    <string name="title_activity_carbon_foot_print_graph">Graph</string>
    <string name="journey">Journey</string>
    <string name="car_name">Car</string>
    <string name="route_Nickname">Route</string>
    <string name="creation_date">Date</string>
    <string name="co2">CO₂</string>
    <string name="total_distance_table">Total Distance</string>
    <string name="title_activity_carbon_footprint_menu">Journey Data</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="how_to_select_a_vehicle">How to Select A Transportation</string>
    <string name="tap_on_vehicle_name_in_the_list_of_vehicles">Tap on Transportation Name in the List of Transportation</string>
    <string name="top_on_route_name_in_the_list_of_rooutes">Top on Route Name in the List of Routes</string>
    <string name="how_to_select_a_route">How to Select a Route</string>
    <string name="how_to_edit_delete_a_vehicle">How to Edit/Delete A Transportation</string>
    <string name="tap_and_hold_the_vehicle_name_in_the_list_of_vehicles">Tap and Hold the Transportation Name in the list of transportations</string>
    <string name="how_to_edit_delete_a_route">How To Edit/Delete a Route</string>
    <string name="tap_and_hold_the_route_name_in_the_route_list">Tap and hold the Route Name in the Route List</string>
    <string name="help_menu_title">Help Menu</string>
    <string name="selected_vehicle_name">Selected Transportation Name:</string>
    <string name="no_vehicle_selected">No Transportation Selected</string>
    <string name="selected_route_name">Selected Route Name:</string>
    <string name="no_route_selected">No Route Selected</string>
    <string name="carbon_footprint">Carbon Footprint:</string>
    <string name="n_a">N/A</string>
    <string name="delete">Delete</string>
    <string name="transmission">Transmission:</string>
    <string name="journey_car">journey car</string>
    <string name="distance">Distance</string>
    <string name="car">Transportation</string>
    <string name="route">Route</string>
    <string name="create">Create</string>
    <string name="other_transport">other Transport</string>
    <string name="tap_and_hold_to_edit_delete_routes">Tap and Hold To Edit/Delete Routes</string>
    <string name="tap_and_hold_to_edit_delete_vehicles">Tap and Hold To Edit/Delete Transportations</string>
    <string name="engine_displacement">Engine Displacement:</string>
    <string name="view_journey">view journey</string>
    <string name="creation_id">ID</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_utility_select">Select Utiltity Bill</string>
    <string name="utlity_add">Add Utility Bill</string>
    <string name="transportation">Transportation</string>
    <string name="title_emssions_summary">Utility Emissions Summary</string>
    <string name="title_activity_carbon_footprint_daily_menu">CarbonFootprintDailyMenu</string>
    <string name="tap_and_hold_to_edit_utilities_bill">Tap and Hold to Edit Utilities Bill</string>
    <string name="emissions_by_period">Bar Graphs</string>
    <string name="data_menu_title">Data Menu</string>
    <string name="transporation_mode">Transporation Mode</string>
    <string name="choose_date">Choose Date</string>
    <string name="tap_and_hold_to_edit_or_delete_journies">Tap and Hold to Edit or Delete Journies</string>
    <string name="view_utilities">View Utilities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="journey_created">Journey Created!</string>
    <string name="please_select_route_and_transportation">Please select Route and Transportation</string>
    <string name="this_journey_already_exists">This Journey already exists.</string>
    <string name="route_deleted">Route Deleted!</string>
    <string name="highway_city_not_zero">Highway or city should be non-zero.</string>
    <string name="please_enter_a_route_name">Please enter a route name.</string>
    <string name="please_enter_a_highway_distance">Please enter a highway distance.</string>
    <string name="please_enter_a_city_distance">Please enter a city distance.</string>
    <string name="route_added">Route Added!</string>
    <string name="this_route_already_exists">This route already exists.</string>
    <string name="failed_to_delete">Failed to delete!!</string>
    <string name="transportation_deleted">Transportation Deleted!</string>
    <string name="transportation_added">Transportation Added!</string>
    <string name="please_enter_a_transportation_name">Please enter a transportation name.</string>
    <string name="vehicle_make_shoud_be_selected">Vehicle make should be selected</string>
    <string name="vehicle_model_should_be_selected">Vehicle model should be selected</string>
    <string name="vehicle_year_should_be_selected">Vehicle year should be selected</string>
    <string name="vehicle_transmission_should_be_selected">Vehicle transmission should be selected</string>
    <string name="engine_displacement_should_be_selected">Engine Displacement should be selected</string>
    <string name="utility_deleted">Utility Deleted!</string>
    <string name="utility_added">Utility Added!</string>
    <string name="please_enter_a_utility_name">Please enter a Utility name.</string>
    <string name="company_should_be_selected">Company should be selected</string>
    <string name="please_select_start_and_end_days">Please select start and end days.</string>
    <string name="end_date_cannot_be_before_start_date">End date cannot be before start date.</string>
    <string name="please_enter_energy_consumption">Please enter Energy Consumption</string>
    <string name="please_enter_occupants">Please enter Occupants</string>
    <string name="this_utility_already_exists">This Utility already exists.</string>
    <string name="you_had">You had</string>
    <string name="car_trips_today_you_might_be_able_to_cut">car trips today. You might be able to cut that down by combining trips tomorrow.</string>
    <string name="you_generate">You generate</string>
    <string name="of_co2_shorter_shower_might_help">of CO₂ . Shorter showers might help cut down emissions from hot water heater.</string>
    <string name="overall_you_had">Overall you had</string>
    <string name="kgs_of_carbon_which">kgs of carbon which</string>
    <string name="of_it_belongs_to_your_car_trips">of it belongs to your car trips</string>
    <string name="you_have">You have</string>
    <string name="trips_with_total_distance_of_less_than">trips with total distance of less than 10km you can try walking or biking these routes</string>
    <string name="you_have_walked_biked">You have Walked/Biked</string>
    <string name="kms_in_total_of">kms in total of</string>
    <string name="walk_or_bike_trips_you_had">walk/bike trips you had</string>
    <string name="in_">In</string>
    <string name="of_your_car_journeys_highway_diatance_was_less_than_city">of your car journeys highway distance was less than city distance</string>
    <string name="if_it_is_not_necessary_try_to_avoid">if it is not necessary try to avoid driving in city and traffics because it produces more CO2</string>
    <string name="during_taking_each_of_your">during taking each of your</string>
    <string name="car_tips_try_to_drive_at_an_appropriate_speed">car tips try to Drive at an appropriate speed -</string>
    <string name="staying_within_the_70mph_limit_can_bring_saving">staying within the 70mph limit can bring savings of 10 per cent for your fuel bill compared to driving at 80mph.</string>
    <string name="today_your_co2_emission_was">today your CO₂ emission was</string>
    <string name="co2_emission_per_person_in_canada">CO₂ emission per person in Canada</string>
    <string name="is_on_average_">is on average 14.68 metric tons per day</string>
    <string name="remove_unnecessary_weight_from_your">Remove unnecessary weight from your</string>
    <string name="cars_this_will_cut_down_fuel_consumption">cars; this will cut down fuel consumption and carbon dioxide emissions</string>
    <string name="your_journey_">your journey</string>
    <string name="uses_the_most_amount_of_co2_with_the">uses the most amount of CO₂ with the</string>
    <string name="try_to_avoid_this_journey_if">. Try to avoid this journey if it is possible</string>
    <string name="today_you_had_">Today you had</string>
    <string name="journeys_plan_to_do_a_number_of_errands">journeys plan to do a number of errands in one trip rather than several trips and save both time and fuel</string>
    <string name="your_number_of_walking_trip_is">Your number of walking trip is</string>
    <string name="and_your_car_trip_is">and your car trip is</string>
    <string name="you_can_try_to_walk_more">You can try to walk more</string>
    <string name="if_you_are_using_one_of_your">if you are using one of your</string>
    <string name="cars_you_have_created_today_minimise">cars you have created today Minimise fuel wasted in idling by stopping the engine whenever your car is stopped or held up for an extended period of time.</string>
    <string name="while_driving_one_of_your">while driving one of your</string>
    <string name="cars_listen_to_the_radio_for_traffic_slowdown">cars listen to the radio for traffic slowdown warnings</string>
    <string name="if_you_are_taking_one_of_your">If you are taking one of your</string>
    <string name="cancel_bottom_nav">Cancel</string>
    <string name="add_bottom_nav">Add</string>
    <string name="edit_bottom_nav">Edit</string>
    <string name="about">About</string>
    <string name="route_list">Route List</string>
    <string name="transportation_list">Transportation List</string>
    <string name="journey_list">Journey List</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="carbon_footprint_graph">Carbon Footprint</string>
    <string name="footprint_nav">Footprint</string>
    <string name="bar_graph_nav">Bar Graph</string>
    <string name="pie_graph_nav">Pie Graph</string>
</resources>