<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_back"
            android:icon="@drawable/ic_back"
            android:title="@string/back" />
        <item
            android:id="@+id/nav_carbon_footprint"
            android:icon="@drawable/utility"
            android:title="@string/carbon_footprint_graph" />
        <item
            android:id="@+id/nav_journey_list"
            android:icon="@drawable/ic_back"
            android:title="@string/journey_list" />
        <item
            android:id="@+id/nav_transportation_list"
            android:icon="@drawable/bicycle"
            android:title="@string/transportation_list" />
        <item
            android:id="@+id/nav_route_list"
            android:icon="@drawable/route"
            android:title="@string/route_list" />
        <item
            android:id="@+id/nav_utility_list"
            android:icon="@drawable/utility"
            android:title="Utility List" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

</menu>
