<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cancel"
        android:enabled="true"
        android:icon="@drawable/ic_cancel"
        android:title="@string/cancel_bottom_nav"
        android:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add_bottom_nav"
        android:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_edit"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_bottom_nav"
        android:showAsAction="ifRoom"
        />

</menu>