<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_transportation_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cmpt276.indigo.carbontracker.JourneyAddActivity"
    tools:showIn="@layout/journey_add_app_bar">

    <Button
        android:text="@string/title_activity_transportation_select_actvitiy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/journey_menu_select_transport_btn"
        android:layout_marginTop="37dp"
        android:theme="@style/GreenButton"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/title_activity_route_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/journey_menu_select_route_btn"
        android:theme="@style/GreenButton"
        android:layout_below="@+id/journey_menu_select_transport_btn"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/selected_vehicle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start" />

            <TextView
                android:text="@string/no_vehicle_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/journey_menu_text_current_vehicle"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/selected_route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"/>

            <TextView
                android:text="@string/no_route_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/journey_menu_text_current_route"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/carbon_footprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"/>

            <TextView
                android:text="@string/n_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"
                android:id="@+id/journey_menu_text_current_footprint" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/journey_menu_select_date_btn"
        android:theme="@style/GreenButton"
        android:layout_below="@+id/journey_menu_select_route_btn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
