<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transportation_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpt276.indigo.carbontracker.TransportationAddActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/transportation_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/add_transport_editText_nickname"
                android:hint="@string/nickname"
                style="@style/Widget.AppCompat.EditText" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_transport_dropdown_make" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_transport_dropdown_model" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_transport_dropdown_year" />

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/transmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTransmission"
                android:textSize="18sp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_transport_dropdown_transmission"
                android:layout_marginStart="17dp" />

        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_transport_delete_btn"
        android:textAllCaps="false"
        android:layout_marginEnd="18dp"
        android:layout_alignBaseline="@+id/add_transport_ok_btn"
        android:layout_alignBottom="@+id/add_transport_ok_btn"
        android:layout_toStartOf="@+id/add_transport_ok_btn" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_transport_ok_btn"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
