<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/list_item_carbon_footprint_table_id_col"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/creation_id"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/list_item_carbon_footprint_table_date_col"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.19"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/creation_date"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/list_item_carbon_footprint_table_vehicle_col"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/car"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/list_item_carbon_footprint_table_route_col"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.19"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/route"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />





</LinearLayout>